--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Las recetas de 1109</title>
+        <link rel="stylesheet" href="estilos.css">
     </head>
 
-    <body></body>
+    <body>
     <br>
     <h1><span style="color: #2678d6;">Pizza casera</span></h1>
     <h6><span style="color: rgb(126, 126, 126);">Receta realizada por Alejo Ponce.</span></h6>
