creamos carpeta galeria, agregamos index para tener la galeria, creamos carpeta img con todas las imagenes a usar en galeria  y modificamos los estilos de las recetas y la galeria, se uso la palabra  important en el estilos de la receta para remarcar cosas importantes a respetar por el navegador al mostrar estilo de la pagina

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <main>
         <header>
             <!--Encabezado-->
             <h1>Nuestras recetas</h1>
@@ -24,7 +25,7 @@
                 <li><a href="#galletas">Base de galletitas</a></li>
             </ol>
         </nav>
-        <main>
+        
             <section>
                 <article id="casera">
     <h1><span style="color: #2678d6;">Pizza casera</span></h1>
@@ -338,6 +339,10 @@
         <li>Listo! Si quisieran bañarlas con glaceado o chocolate deben esperar a que se enfríen.</li>
     </ol>
     </article>
+
+
+
+
             </section>
         </main>
 
@@ -1026,6 +1031,15 @@
             <li>Se calienta el horno a 150º y se mete el molde.</li>
             <li>Tiempo de coccion: 45 minutos</li>
         </ul><img src="./Img/receta-pan-molde-integral-4.jpg" alt="Pan Integral" width="600px" />
+
+        <div id="principal">
+            <div class="rojo">Uno</div>
+            <div class="rojo" id="negro">Dos</div>
+            <div class="rojo">Tres</div>
+            <div class="rojo">Cuatro</div>
+        </div>
+
+
     </body>
 
 
