grid responsive, actividad 3, carrusel, galeria y acordion

--- a/animaciones-iconos/index.html
+++ b/animaciones-iconos/index.html
@@ -9,9 +9,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <!--ruta absoluta-->
-    <link rel="stylesheet" href="/animaciones-iconos/css/estilos.css" />
-    <!--ruta relativa-->
+    <!--ruta absoluta animate css-->
+    <link rel="stylesheet" href="./css/estilos.css" />
+    <!--ruta relativa de hoja de estilo-->
     <script
       src="https://kit.fontawesome.com/dd3936a347.js"
       crossorigin="anonymous"
