JS, variables, tipos de datos, condicionales, operadores logicos, relacionales y matematicos, capturar elementos del DOM con el document y los getElement y el documentwrite

--- a/actividad-unidad-3/index.html
+++ b/actividad-unidad-3/index.html
@@ -84,7 +84,12 @@
           <article>
             <div class="card-group">
               <div class="card">
-                <img src="./img/html5.jpg" class="card-img-top" alt="html5" />
+                <img
+                  src="./img/html5.jpg"
+                  class="card-img-top"
+                  id="html"
+                  alt="html5"
+                />
                 <div class="card-body">
                   <h5 class="card-title">título 1</h5>
                   <p class="card-text">Contenido de card</p>
