--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/estilosB.css" />
-    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css" /> -->
   </head>
   <body>
     <div class="container">
