--- a/grid/index.html
+++ b/grid/index.html
@@ -124,6 +124,7 @@
           <!--el col-6 achica el tamaño de imagen-->
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <!--la clase active debe estar en alguna diapositiva, para que el carrusel sea visible-->
               <img
                 src="../img/20210110_203321.jpg"
                 class="d-block w-100"
