--- a/javascript/index.html
+++ b/javascript/index.html
@@ -15,9 +15,13 @@
   </head>
 
   <body>
+    <h1 class="text-center">Javascript</h1>
+    <button id="btn" class="btn btn-primary">Sumar</button>
+    <!--si quisieramos agregar el evento, deberíamos agreagr onclick al lado de la class-->
+
     <div class="container">
       <div class="row" id="principal"></div>
     </div>
-    <script src="./js/app.js"></script>
+    <script src="./js/clase3.js"></script>
   </body>
 </html>
