objetos, DOM, callbacks, eventos click y load, funcion anonima

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -16,12 +16,13 @@
 
   <body>
     <h1 class="text-center">Javascript</h1>
-    <button id="btn" class="btn btn-primary">Sumar</button>
-    <!--si quisieramos agregar el evento, deberíamos agreagr onclick al lado de la class-->
+    <!-- <button id="btn" class="btn btn-primary">Sumar</button> -->
+    <!--si quisieramos agregar el eventListener, deberíamos agregar onclick al lado de la clase, fuera de las comillas. y el nombre lo ponemos entre comillas y con ()
+     onclick="inicio()"-->
 
     <div class="container">
       <div class="row" id="principal"></div>
     </div>
-    <script src="./js/clase3.js"></script>
+    <script src="./js/clase4.js"></script>
   </body>
 </html>
