--- a/tp-frontend-con-js/index.html
+++ b/tp-frontend-con-js/index.html
@@ -36,6 +36,7 @@
                   border border-dark border-3
                 "
               ></span>
+              <!--agregamos borde y bg-warning y bg-ligth al toggler para que se destaque-->
             </button>
             <a class="navbar-brand" href="#">
               <img src="./img/codoacodo.png" alt="" id="logo" />
@@ -75,42 +76,63 @@
 
       <section id="seccion">
         <section>
-          <div class="card bg-dark text-white">
-            <img
-              src="./img/hawaii.jpg"
-              class="card-img opacity-50"
-              alt="..."
-              id="edificio"
-            />
-            <!--agregamos id para modificar height y width de img-->
+          <div class="card bg-dark">
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./img/hawaii.jpg"
+                    class="card-img opacity-50"
+                    id="edificio"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/hawaii2.jpg"
+                    class="card-img opacity-50"
+                    id="cafe"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/hawaii3.jpg"
+                    class="card-img opacity-50"
+                    id="obelisco"
+                  />
+                </div>
+              </div>
+            </div>
+  
+            <!--agregamos id a cada img para modificar height y width de img-->
             <div class="card-img-overlay">
-              <p class="card-title fs-2">Conf Bs As</p>
-              <p class="card-text fs-6">
-                Bs As llega por primera vez a Argentina. Un evento para
-                compartir con <br />
+              <p class="card-title fs-2" id="carusel-title">Conf Bs As</p>
+              <p class="card-text fs-6" id="carusel-text">
+                Bs As llega por primera vez a Argentina. Un evento para compartir
+                con <br />
                 nuestra comunidad el conocimiento y experiencia de los expertos
                 que <br />
-                están creando el futuro de Internet. Ven a conocer a miembros
-                del
+                están creando el futuro de Internet. Ven a conocer a miembros del
                 <br />
-                evento, a otros estudiantes de Codo a Codo y los ordador de
-                primer
+                evento, a otros estudiantes de Codo a Codo y los ordador de primer
                 <br />
                 nivel que tenemos para ti. Te esperamos!
               </p>
               <div class="d-inline">
-                <button type="button" class="btn btn-outline-light mt-3">
+                <button type="button" class="btn btn-outline-light btn-sm mt-3">
                   Quiero ser orador
                 </button>
                 <button
                   type="button"
-                  class="btn btn-hawaii mt-3"
+                  class="btn btn-hawaii btn-sm mt-3"
                   onclick="comprarTicket()"
                 >
                   Comprar tickets
                 </button>
-                <!--creamos clase btn btn-hawaii para cambiar color de botón en CSS
-              ACÁ INICIARÍA EL PRÓXIMO PASO PARA EL TP DE "GIT"-->
+                <!--creamos clase btn btn-hawaii para cambiar color de botón en CSS-->
               </div>
             </div>
           </div>
@@ -118,70 +140,71 @@
 
         <section>
           <div class="container">
-            <div class="row">
+            <div class="row pt-2">
               <div class="text-center">
-                <small>CONOCÉ A LOS</small>
-                <h1>ORADORES</h1>
+                <small class="text-uppercase">conoce a los</small>
+                <h1 class="text-uppercase">oradores</h1>
               </div>
-
-              <div class="card-group">
-                <div class="card pe-4">
-                  <img
-                    src="./img/steve.jpg"
-                    class="card-img-top img-fluid rounded"
-                    alt="..."
-                  />
-                  <div class="card-body">
-                    <span class="badge bg-warning text-dark">Javascript</span>
-                    <span class="badge bg-info">React</span>
-                    <h5 class="card-title">Steve Jobs</h5>
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Omnis deserunt exercitationem alias corrupti, nostrum
-                      facere cum animi ab. Modi, porro! Nihil modi cupiditate
-                      dignissimos hic at inventore amet dolore minima!
-                    </p>
+              <div class="row">
+                <div class="card-group">
+                  <div class="card m-2 border border-1">
+                    <img
+                      src="./img/steve.jpg"
+                      class="card-img-top img-fluid rounded"
+                      alt="..."
+                    />
+                    <div class="card-body">
+                      <span class="badge bg-warning text-dark">Javascript</span>
+                      <span class="badge bg-info">React</span>
+                      <h5 class="card-title">Steve Jobs</h5>
+                      <p class="card-text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Omnis deserunt exercitationem alias corrupti, nostrum
+                        facere cum animi ab. Modi, porro! Nihil modi cupiditate
+                        dignissimos hic at inventore amet dolore minima!
+                      </p>
+                    </div>
                   </div>
-                </div>
-
-                <div class="card pe-4">
-                  <img
-                    src="./img/bill.jpg"
-                    class="card-img-top img-fluid rounded"
-                    alt="..."
-                  />
-                  <div class="card-body">
-                    <span class="badge bg-warning text-dark">Javascript</span>
-                    <span class="badge bg-info">React</span>
-                    <h5 class="card-title">Bill Gates</h5>
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Aspernatur odio tempora veritatis, nulla deserunt libero
-                      numquam ex modi? Vitae suscipit itaque perferendis vero
-                      laudantium ex delectus beatae maiores sunt officiis!
-                    </p>
+  
+                  <div class="card m-2 border border-1">
+                    <img
+                      src="./img/bill.jpg"
+                      class="card-img-top img-fluid rounded"
+                      alt="..."
+                    />
+                    <div class="card-body">
+                      <span class="badge bg-warning text-dark">Javascript</span>
+                      <span class="badge bg-info">React</span>
+                      <h5 class="card-title">Bill Gates</h5>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Aspernatur odio tempora veritatis, nulla deserunt libero
+                        numquam ex modi? Vitae suscipit itaque perferendis vero
+                        laudantium ex delectus beatae maiores sunt officiis!
+                      </p>
+                    </div>
                   </div>
-                </div>
-
-                <div class="card pe-4">
-                  <img
-                    src="./img/ada.jpeg"
-                    class="card-img-top img-fluid rounded"
-                    alt="..."
-                  />
-                  <div class="card-body">
-                    <span class="badge rounded-pill bg-secondary"
-                      >Negocios</span
-                    >
-                    <span class="badge rounded-pill bg-danger">Startups</span>
-                    <h5 class="card-title">Ada Lovelace</h5>
-                    <p class="card-text">
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Illum sequi, voluptatibus reprehenderit mollitia totam
-                      aperiam distinctio nulla architecto aspernatur tempora
-                      alias iure iusto libero, esse odit nisi nesciunt ad
-                      provident?
-                    </p>
+  
+                  <div class="card m-2 border border-1">
+                    <img
+                      src="./img/ada.jpeg"
+                      class="card-img-top img-fluid rounded"
+                      alt="..."
+                    />
+                    <div class="card-body">
+                      <span class="badge rounded-pill bg-secondary"
+                        >Negocios</span
+                      >
+                      <span class="badge rounded-pill bg-danger">Startups</span>
+                      <h5 class="card-title">Ada Lovelace</h5>
+                      <p class="card-text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Illum sequi, voluptatibus reprehenderit mollitia totam
+                        aperiam distinctio nulla architecto aspernatur tempora
+                        alias iure iusto libero, esse odit nisi nesciunt ad
+                        provident?
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -201,14 +224,13 @@
                 <div class="card-body">
                   <h5 class="card-title">Bs As - Octubre</h5>
                   <p class="card-text" id="text-honolulu">
-                    Buenos Aires es la provincia y localidad más grande del
-                    estado de Argentina, en los Estados Unidos. Honolulu es la
-                    más sureña de entre las principaples ciudades
-                    estadounidenses. Aunque el nombre de Honolulu se refiere al
-                    área urbana en la costa sureste de la isla de Oahu, la
-                    ciudad y el condado de Honolulu han formado una
-                    ciudad-condado consolidada que cubre toda la ciudad
-                    (aproximadamente 600 km² de superficie)
+                    Buenos Aires es la provincia y localidad más grande del estado
+                    de Argentina, en los Estados Unidos. Honolulu es la más sureña
+                    de entre las principaples ciudades estadounidenses. Aunque el
+                    nombre de Honolulu se refiere al área urbana en la costa
+                    sureste de la isla de Oahu, la ciudad y el condado de Honolulu
+                    han formado una ciudad-condado consolidada que cubre toda la
+                    ciudad (aproximadamente 600 km² de superficie)
                   </p>
                   <!--agregamos id para modificar font-size de texto-->
                   <button type="button" class="btn btn-sm btn-outline-light">
@@ -220,61 +242,60 @@
           </div>
         </section>
 
-        <section>
-          <div class="container">
-            <div class="row">
-              <div class="text-center">
-                <small>CONVIERTETE EN UN </small>
-                <h1>ORADOR</h1>
-                <small
-                  >Anótate como orador para dar una
-                  <small class="text-decoration-underline">charla ignite</small
-                  >. Cuéntanos de qué quieres hablar!</small
-                >
-              </div>
-
-              <div class="row my-3">
-                <div class="col-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="exampleFormControlInput1"
-                    placeholder="Nombre"
-                  />
-                </div>
-
-                <div class="col-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="exampleFormControlInput2"
-                    placeholder="Apellido"
-                  />
-                </div>
-
-                <div>
-                  <textarea
-                    class="form-control mt-3"
-                    id="exampleFormControlTextarea1"
-                    rows="4"
-                    placeholder="Sobre qué quieres hablar?"
-                    aria-describedby="textHelpBlock"
-                  ></textarea>
-                  <small id="textHelpBlock" class="form-text text-muted">
-                    Recuerda incluir un título para tu charla
-                  </small>
-                </div>
-
-                <div class="d-grid col-sm-12 my-3">
-                  <button type="submit" class="btn btn-lg" id="btn-orador">
-                    Enviar
-                  </button>
-                </div>
-              </div>
-              <!--agregamos id al botón para configurar desde CSS-->
+        <div class="container">
+          <div class="row">
+            <div class="text-center">
+              <small class="text-uppercase">conviértete en un </small>
+              <h1 class="text-uppercase">orador</h1>
+              <small
+                >Anótate como orador para dar una
+                <small class="text-decoration-underline">charla ignite</small>.
+                Cuéntanos de qué quieres hablar!</small
+              >
             </div>
+
+            <div class="row my-3">
+              <div class="col-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="Nombre"
+                />
+              </div>
+
+              <div class="col-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleFormControlInput2"
+                  placeholder="Apellido"
+                />
+              </div>
+
+              <div>
+                <textarea
+                  class="form-control mt-3"
+                  id="exampleFormControlTextarea1"
+                  rows="4"
+                  placeholder="Sobre qué quieres hablar?"
+                  aria-describedby="textHelpBlock"
+                ></textarea>
+                <small id="textHelpBlock" class="form-text text-muted">
+                  Recuerda incluir un título para tu charla
+                </small>
+              </div>
+
+              <div class="d-grid col-sm-12 my-3">
+                <button type="submit" class="btn btn-lg" id="btn-orador">
+                  Enviar
+                </button>
+              </div>
+            </div>
+            <!--agregamos id al botón para configurar desde CSS-->
           </div>
-        </section>
+        </div>
+      </section>
       </section>
     </main>
 
@@ -282,7 +303,7 @@
       <div class="container-fluid pb-3 pt-4 justify-content-evenly footer">
         <!--agregamos la clase footer para adaptar color de fondo y tamaños de letra desde CSS -->
         <div class="row text-center">
-          <div class="col mx-3">
+          <div class="col mx-4">
             <a class="text-decoration-none" href="#"
               >Preguntas <br />
               frecuentes</a
@@ -315,8 +336,13 @@
 
     <script src="./js/app.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
   </body>
