--- a/tp-frontend-con-js/index.html
+++ b/tp-frontend-con-js/index.html
@@ -66,7 +66,7 @@
                 <a class="nav-link" href="#">Conviértete en orador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" id="tickets">Comprar tickets</a>
+                <a class="nav-link" href="#" id="tickets" onclick="comprarTicket()">Comprar tickets</a>
               </li>
               <!--agregamos id a este nav-link para cambiar color de enlace-->
             </ul>
